--- a/styles.css
+++ b/styles.css
@@ -66,11 +66,11 @@ main {
 }
 
 #social-link.facebook {
-  background-image: linear-gradient(blue, white);
+  background-image: linear-gradient(#4267B2, #fff);
 }
 
 #social-link.instagram {
-  background-image: linear-gradient(pink, yellow);
+  background-image: linear-gradient(#4f5bd5, #962fbf, #d62976, #fa7e1e, #feda75);
 }
 
 form {
