--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ main {
   background-color: #fff;
 }
 
-
+/* 
 form {
     display: flex;
     flex-direction: column;
@@ -125,4 +125,4 @@ footer p {
 footer a {
     text-decoration: none;
     color: #333;
-}
+} */
