--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ header {
 .logo {
   width: 150px;
   border-radius: 50%;
+  margin-top: 20px;
 }
 
 /* Main content section styles */
@@ -63,10 +64,13 @@ main {
   margin-bottom: 20px;
   border-radius: 15px;
   font-size: bold;
+  border: #ff8200 2px solid;
+  opacity: .9\\;
 }
 
 #social-link.facebook {
   background-color: #fff;
+  margin-top: 50px;
 }
 
 #social-link.instagram {
