--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 100vh;
-  text-shadow: 1px 1px 10px #ff8200; 
+  height: 100vh; 
 }
 
 /* Header section styles */
@@ -30,10 +29,15 @@ header {
   background-attachment: fixed;
 }
 
+title, h1, h2 {
+  text-shadow: 1px 1px 10px #ff8200;
+}
+
 .logo {
-  width: 150px;
+  width: 200px;
   border-radius: 50%;
   margin-top: 20px;
+  box-shadow: 0px 0px 10px #ff8200;
 }
 
 /* Main content section styles */
@@ -44,14 +48,14 @@ main {
   flex-direction: column;
 }
 
-.lawn {
+/* .lawn {
   width: 100%;
   max-width: 600px;
   margin: 1rem auto;
   display: block;
   border-radius: 10%;
   opacity: 0.9;
-}
+} */
 
 #social-link {
   display: flex;
@@ -65,20 +69,22 @@ main {
   border-radius: 15px;
   font-size: bold;
   border: #ff8200 2px solid;
-  opacity: .9\\;
 }
 
 #social-link.facebook {
   background-color: #fff;
   margin-top: 50px;
+  text-shadow: 1px 1px 1px #ff8200;
 }
 
 #social-link.instagram {
   background-color: #fff;
+  text-shadow: 1px 1px 1px #ff8200;
 }
 
 #social-link.tik-tok {
   background-color: #fff;
+  text-shadow: 1px 1px 1px #ff8200;
 }
 
 /* 
