--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,8 @@ main {
 
 #social-link {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   background-color: #f1f1f1;
   text-decoration: none;
@@ -69,6 +71,7 @@ main {
   border-radius: 15px;
   font-size: bold;
   border: #ff8200 2px solid;
+  max-width: 600px;
 }
 
 #social-link.facebook {
