--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ body {
   background-size: cover;
   background-attachment: fixed;
   height: 100vh; 
+  width: 100vh;
+  text-align: center;
 }
 
 /* Header section styles */
