--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ title, h1, h2 {
   width: 200px;
   border-radius: 50%;
   margin-top: 20px;
-  box-shadow: 0px 0px 10px #ff8200;
+  border: #ff8200 2px solid;
 }
 
 /* Main content section styles */
