added images to present to the client for a design idea adjusted mobile site for sleakness

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,12 +5,7 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: max(400px, 1fr);
-  grid-template-areas: 
-  "header header header header"
-  "......... h1 h1 ........"
-  "social1 . . social2"
-  "social3 . . social4";
+  grid-template-columns: 1fr;
   grid-gap: 20px;
   padding: 2rem;
   text-align: center;
@@ -20,11 +15,6 @@ header {
   background-color: #000000;
   padding: 1rem;
   text-align: center;
-  grid-area: header;
-}
-
-h1 {
-    grid-area: h1;
 }
 
 .logo {
@@ -37,13 +27,14 @@ h1 {
 #social-link {
   text-align: center;
   max-width: 500px;
-  max-height: 50px;
   background-color: #f1f1f1;
   text-decoration: none;
   color: #333;
   padding: 10px 20px;
   margin-top: 20px;
   margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 15px;
   font-weight: bold;
   border: #ff8200 2px solid;
@@ -54,28 +45,31 @@ h1 {
   margin-top: 50px;
   text-shadow: 1px 1px 1px #ff8200;
   padding: 15px 110px;
-  grid-area: social1;
 }
 
 #social-link.instagram {
   background-color: #fff;
   text-shadow: 1px 1px 1px #ff8200;
   padding: 15px 110px;
-  grid-area: social2;
 }
 
 #social-link.tik-tok {
   background-color: #fff;
   text-shadow: 1px 1px 1px #ff8200;
   padding: 15px 120px;
-  grid-area: social3;
 }
 #social-link.myspace {
   background-color: #fff;
   text-shadow: 1px 1px 1px #ff8200;
   padding: 15px 120px;
-  grid-area: social4;
 }
+
+.lawn {
+  width: 200px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+} 
 
 /* Additional styling */
 body {
@@ -100,88 +94,32 @@ footer {
   background-attachment: fixed;
 }
 
-// @media screen and (max-width: 768px) {
-//   .grid-container {
-//     display: grid;
-//     grid-template-columns: 1fr;
-//     grid-gap: 20px;
-//     padding: 2rem;
-//     text-align: center;
-//   }
+@media screen and (min-width: 768px) {
+  .grid-container {
+    grid-template-columns: repeat(6, 1fr);
+    align-items: center;
+    justify-items: center;
+  }
 
-//   header {
-//     background-color: #000000;
-//     padding: 1rem;
-//     text-align: center;
-//   }
+  .grid-container > * {
+    grid-column: span 2;
+  }
 
-//   .logo {
-//     width: 200px;
-//     border-radius: 50%;
-//     margin-top: 20px;
-//     border: #ff8200 2px solid;
-//   }
+  #social-link {
+    max-width: 300px;
+  }
 
-//   #social-link {
-//     text-align: center;
-//     max-width: 500px;
-//     background-color: #f1f1f1;
-//     text-decoration: none;
-//     color: #333;
-//     padding: 10px 20px;
-//     margin-top: 20px;
-//     margin-bottom: 20px;
-//     margin-left: auto;
-//     margin-right: auto;
-//     border-radius: 15px;
-//     font-weight: bold;
-//     border: #ff8200 2px solid;
-//   }
+  .logo {
+    grid-column: span 6;
+  }
 
-//   #social-link.facebook {
-//     background-color: #fff;
-//     margin-top: 50px;
-//     text-shadow: 1px 1px 1px #ff8200;
-//     padding: 15px 110px;
-//   }
+  #social-link.facebook,
+  #social-link.instagram {
+    grid-column: span 3;
+  }
 
-//   #social-link.instagram {
-//     background-color: #fff;
-//     text-shadow: 1px 1px 1px #ff8200;
-//     padding: 15px 110px;
-//   }
-
-//   #social-link.tik-tok {
-//     background-color: #fff;
-//     text-shadow: 1px 1px 1px #ff8200;
-//     padding: 15px 120px;
-//   }
-//   #social-link.myspace {
-//     background-color: #fff;
-//     text-shadow: 1px 1px 1px #ff8200;
-//     padding: 15px 120px;
-//   }
-
-//   /* Additional styling */
-//   body {
-//     font-family: Arial, sans-serif;
-//     margin: 0;
-//     padding: 0;
-//     background-image: url(/imgs/lawn.jpg);
-//     background-position: center;
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     background-attachment: fixed;
-//   }
-
-//   footer {
-//     padding: 1rem;
-//     background-color: #f5f5f5;
-//     text-align: center;
-//     background-image: url(/imgs/lawn.jpg);
-//     background-position: center;
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     background-attachment: fixed;
-//   }
-// }
+  #social-link.tik-tok,
+  #social-link.myspace {
+    grid-column: span 3;
+  }
+}
