--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,8 @@ header {
 }
 
 .lawn {
-  width: 200px;
+  width: -moz-fit-content;
+  width: fit-content;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
