--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -65,10 +65,12 @@ header {
 }
 
 .lawn {
-  width: fit-content;
+  width: 300px;
+  height: 300px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  border: #ff8200 2px solid;
 } 
 
 /* Additional styling */
@@ -81,6 +83,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  text-shadow: 1px 1px 1px #ff8200;
 }
 
 footer {
